{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "9ecf110c-b77f-40a3-b4c0-b72804b9add7",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "5adde000-c7c0-4810-85b3-6a1e47a89e16",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSwitch",
                    "type": "Button",
                    "id": "f7198a32-1b32-46bd-be0e-6d5304c2a52c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookX",
                    "type": "PassThrough",
                    "id": "1552dcca-ff06-4107-b2d0-afeb025851bc",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LookY",
                    "type": "PassThrough",
                    "id": "9a41f38d-b259-4f6e-a07a-a3202ca9f996",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpecialAction",
                    "type": "Button",
                    "id": "bce64d68-b76a-42a6-aa61-49365ae7a54c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a3754de3-aa97-4cae-a267-88a83b47c0eb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "957edc5c-8365-45e1-9c6e-621843d8ea56",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22044924-b94d-48fa-b8e6-85fe56f9099e",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3e29298-4971-489e-85d2-93691afa6c37",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8894f237-f4e1-44d1-ab22-8ebecb2e4b4b",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecialAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}